<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_primary_dark"
        tools:context=".view.detail.DetailActivity">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/loading"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerInParent="true"
            app:lottie_autoPlay="true"
            app:lottie_fileName="loading.json"
            app:lottie_loop="true" />

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:elevation="2dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/image_description"
            android:src="@drawable/ic_back" />

        <ImageView
            android:id="@+id/image_poster"
            android:layout_width="match_parent"
            android:layout_height="270dp"
            android:contentDescription="@string/image_description"
            android:scaleType="centerCrop" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_bookmark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/layout_description"
            android:layout_alignBottom="@+id/image_poster"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="40dp"
            android:contentDescription="@string/image_description"
            android:src="@drawable/ic_bookmark"
            app:backgroundTint="@color/button_color"
            app:elevation="2dp"
            app:tint="@android:color/white" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/layout_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/image_poster"
            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="-64dp"
            app:cardBackgroundColor="@color/color_primary"
            app:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="24dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    tools:text="Hitman" />

                <TextView
                    android:id="@+id/tv_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:textColor="@color/rating_color"
                    android:textSize="18sp"
                    tools:text="Rating : 8.5" />

                <TextView
                    android:id="@+id/tv_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movies_description"
                    android:textColor="@color/text_grey"
                    android:textSize="16sp" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_description"
            android:layout_marginHorizontal="18dp"
            android:layout_marginVertical="16dp"
            app:cardBackgroundColor="@color/color_primary"
            app:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/detail"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="4dp"
                    android:textColor="@color/text_grey"
                    android:textSize="18sp"
                    tools:text="Year : 2020" />

                <TextView
                    android:id="@+id/tv_genre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_grey"
                    android:textSize="18sp"
                    tools:text="Genre : action" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_trailer"
                        android:layout_width="wrap_content"
                        android:layout_height="55dp"
                        android:layout_marginEnd="4dp"
                        android:layout_weight="1"
                        android:text="@string/trailer"
                        android:textAllCaps="false"
                        android:textSize="18sp"
                        app:backgroundTint="@color/button_color" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_share"
                        android:layout_width="wrap_content"
                        android:layout_height="55dp"
                        android:layout_marginStart="4dp"
                        android:layout_weight="1"
                        android:text="@string/share"
                        android:textAllCaps="false"
                        android:textSize="18sp"
                        app:backgroundTint="@color/button_color" />

                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </RelativeLayout>

</ScrollView>
